Cplex opt function correct so far.\n several paths of flows can be deployed